Fixed vertical image overflow issue on details page

--- a/collectionsapp/static/collectionsapp/css/base.css
+++ b/collectionsapp/static/collectionsapp/css/base.css
@@ -88,7 +88,7 @@ li.no-bullets {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 403px;
     width: 100%;
 }
 
